// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonLayout > should render button layout with direction { column: true } 1`] = `
<div>
  <div
    class="lds--button-layout lds--button-layout--column lds--button-layout--full-width lds--button-layout--spacing--xs"
  >
    <button>
      example primary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction { row: true } 1`] = `
<div>
  <div
    class="lds--button-layout lds--button-layout--row lds--button-layout--full-width lds--button-layout--spacing--xs"
  >
    <button>
      example primary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction lg 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--lg"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction md 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--md"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction sm 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--sm"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction xl 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--xl"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction xs 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--xs"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction xxl 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--xxl"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with direction xxs 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--xxs"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with fullWidth=false 1`] = `
<div>
  <div
    class="lds--button-layout   lds--button-layout--spacing--xs"
  >
    <button>
      example primary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with fullWidth=true 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--xs"
  >
    <button>
      example primary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with primary button 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--xs"
  >
    <button>
      example primary button
    </button>
  </div>
</div>
`;

exports[`ButtonLayout > should render button layout with secondary button 1`] = `
<div>
  <div
    class="lds--button-layout  lds--button-layout--full-width lds--button-layout--spacing--xs"
  >
    <button>
      example primary button
    </button>
    <button>
      example secondary button
    </button>
  </div>
</div>
`;
